# for_green_commit

./: .gitignore  CLAUDE.md  README.md  그린커밋_WEB_서비스_기획서_v0.6.2.docx
app/ai/: .env.example  Dockerfile  pyproject.toml  requirements.txt
app/ai/app/: main.py
app/ai/app/core/: config.py
app/ai/app/db/: neo4j.py  postgres.py  redis.py
app/ai/app/model_gateway/: base.py  mock_client.py
app/ai/app/routers/: orchestration.py  quality_gate.py  repository_analysis.py  retrieval.py
app/ai/app/schemas/: common.py  orchestration.py  quality_gate.py  repository_analysis.py  retrieval.py
app/ai/app/services/: graph_service.py  orchestrator_service.py  quality_gate_service.py  rag_service.py
app/ai/tests/: test_health.py
app/backend/: Dockerfile  build.gradle
app/backend/src/main/resources/: application.yml
app/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
app/frontend/src/: App.css  App.tsx  index.css
app/frontend/src/app/: AuthContext.tsx  AuthGuard.tsx  JourneyContext.tsx  router.tsx
app/frontend/src/shared/: Badge.tsx  Button.tsx  Card.tsx
app/frontend/src/styles/: tokens.css
app/infra/: .env.example  docker-compose.yml
app/infra/gpu-stub/: Dockerfile  app.py
app/infra/minio/init/: create-buckets.sh
app/infra/postgres/init/: 00-extensions.sql
docs/: github-oauth-app-guide.txt  green-commit-prototype-v3.html  setup-guide.txt  그린커밋_ERD.dbml  그린커밋_IA.md  그린커밋_WEB_서비스_기획서_v1.1.docx  그린커밋_WEB_서비스_기획서_v1.2.docx  그린커밋_요구사항정의서_MVP.xlsx  그린커밋_요구사항정의서_MVP_v1.2.xlsx  그린커밋_화면정의서_MVP.xlsx  그린커밋_화면정의서_MVP_v1.2.xlsx
(+252 files in other folders)
