[project]
name = "green-commit-ai"
version = "0.1.0"
description = "Green Commit AI Service — Orchestrator / RAG / Quality Gate (기획서 SECTION IV)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
]

[tool.setuptools]
packages = ["app"]
